// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builtin exporters > mariadb > django 1`] = `
{
  "content": "from django.db import models

class Users(models.Model):
    id = models.BigIntegerField(primary_key=True)
    email = models.CharField(max_length=255, unique=True)
    nickname = models.CharField(max_length=50, null=True, blank=True, default='guest')
    balance = models.CharField(default=0)
    created_at = models.DateTimeField()
    active = models.BooleanField(default=true)

    class Meta:
        db_table = 'users'
        indexes = [
            models.Index(fields=['nickname'], name='idx_users_nickname'),
        ]

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user_id = models.BigIntegerField()
    body = models.TextField(null=True, blank=True)
    user = models.ForeignKey('Users', on_delete=models.CASCADE)

    class Meta:
        db_table = 'posts'
        indexes = [
            models.Index(fields=['user_id', 'id'], name='uq_posts_user'),
        ]
",
  "filename": "models.py",
  "language": "python",
}
`;

exports[`builtin exporters > mariadb > drizzle 1`] = `
{
  "content": "import { sql } from 'drizzle-orm';
import { mysqlTable as table, int, varchar, text, boolean, timestamp, serial } from 'drizzle-orm/mysql-core';

export const users = table('users', {
  id: integer('id').primaryKey(),
  email: varchar('email').notNull().unique(),
  nickname: varchar('nickname').default('guest'),
  balance: text('balance').notNull().default(0),
  created_at: timestamp('created_at').notNull().default(sql\`CURRENT_TIMESTAMP\`),
  active: boolean('active').notNull().default(true),
});

export const posts = table('posts', {
  id: integer('id').primaryKey(),
  user_id: integer('user_id').notNull(),
  body: text('body'),
});
",
  "filename": "schema.ts",
  "language": "typescript",
}
`;

exports[`builtin exporters > mariadb > json 1`] = `
{
  "content": "{
  "version": "1.0.0",
  "projectName": "Fixture",
  "database": {
    "engine": "mariadb",
    "version": "11.4",
    "charset": "utf8mb4"
  },
  "tables": [
    {
      "id": "t-users",
      "name": "users",
      "comment": "User's table",
      "columns": [
        {
          "id": "c1",
          "name": "id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "c2",
          "name": "email",
          "type": "VARCHAR",
          "length": 255,
          "nullable": false,
          "primaryKey": false,
          "unique": true,
          "autoIncrement": false,
          "unsigned": false,
          "comment": "Mail address"
        },
        {
          "id": "c3",
          "name": "nickname",
          "type": "VARCHAR",
          "length": 50,
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": "guest",
          "comment": ""
        },
        {
          "id": "c4",
          "name": "balance",
          "type": "DECIMAL",
          "precision": 10,
          "scale": 2,
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": 0,
          "comment": ""
        },
        {
          "id": "c5",
          "name": "created_at",
          "type": "TIMESTAMP",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": {
            "expression": "CURRENT_TIMESTAMP"
          },
          "comment": ""
        },
        {
          "id": "c6",
          "name": "active",
          "type": "BOOLEAN",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": true,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i1",
          "name": "idx_users_nickname",
          "columns": [
            "nickname"
          ],
          "unique": false
        }
      ],
      "foreignKeys": []
    },
    {
      "id": "t-posts",
      "name": "posts",
      "comment": "",
      "columns": [
        {
          "id": "p1",
          "name": "id",
          "type": "INT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": false,
          "comment": ""
        },
        {
          "id": "p2",
          "name": "user_id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "p3",
          "name": "body",
          "type": "TEXT",
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i2",
          "name": "uq_posts_user",
          "columns": [
            "user_id",
            "id"
          ],
          "unique": true
        }
      ],
      "foreignKeys": [
        {
          "id": "f1",
          "name": "fk_posts_user",
          "columns": [
            "user_id"
          ],
          "referenceTable": "t-users",
          "referenceColumns": [
            "id"
          ],
          "onDelete": "CASCADE",
          "onUpdate": "NO ACTION"
        }
      ]
    }
  ]
}",
  "filename": "tablespec.json",
  "language": "json",
}
`;

exports[`builtin exporters > mariadb > laravel 1`] = `
{
  "content": "<?php

use Illuminate\\Database\\Migrations\\Migration;
use Illuminate\\Database\\Schema\\Blueprint;
use Illuminate\\Support\\Facades\\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id('id');
            $table->string('email')->unique()->comment('Mail address');
            $table->string('nickname')->nullable()->default('guest');
            $table->string('balance')->default(0);
            $table->dateTime('created_at');
            $table->boolean('active')->default(true);
        });

        Schema::create('posts', function (Blueprint $table) {
            $table->increments('id');
            $table->bigInteger('user_id')->unsigned();
            $table->text('body')->nullable();
            $table->foreign(['user_id'])->references(['id'])->on('users')->onDelete('cascade')->onUpdate('no action');
        });

    }

    public function down(): void
    {
        Schema::dropIfExists('posts');
        Schema::dropIfExists('users');
    }
};
",
  "filename": "migration.php",
  "language": "php",
}
`;

exports[`builtin exporters > mariadb > mermaid 1`] = `
{
  "content": "erDiagram
  users {
    BIGINT id PK
    VARCHAR email
    VARCHAR nickname
    DECIMAL balance
    TIMESTAMP created_at
    BOOLEAN active
  }
  posts {
    INT id PK
    BIGINT user_id FK
    TEXT body
  }

  posts }o--|| users : ""
",
  "filename": "diagram.mmd",
  "language": "mermaid",
}
`;

exports[`builtin exporters > mariadb > prisma 1`] = `
{
  "content": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model users {
  id BigInt @id @default(autoincrement())
  email String @unique
  nickname String?
  balance Decimal
  created_at DateTime
  active Boolean
  @@index([nickname])
}

model posts {
  id Int @id @default(autoincrement())
  user_id BigInt
  body String?
  @@unique([user_id, id])
}
",
  "filename": "schema.prisma",
  "language": "prisma",
}
`;

exports[`builtin exporters > mariadb > rails 1`] = `
{
  "content": "class CreateTables < ActiveRecord::Migration[7.0]
  def change
    create_table :users do |t|
      t.string :email, null: false
      t.string :nickname, default: 'guest'
      t.string :balance, null: false, default: 0
      t.datetime :created_at, null: false
      t.boolean :active, null: false, default: true
    end
    add_index :users, [:nickname]

    create_table :posts do |t|
      t.bigint :user_id, null: false
      t.text :body
    end
    add_index :posts, [:user_id, :id], unique: true

    add_foreign_key :posts, :users, column: :user_id, primary_key: :id
  end
end
",
  "filename": "migration.rb",
  "language": "ruby",
}
`;

exports[`builtin exporters > mariadb > sql 1`] = `
{
  "content": "CREATE TABLE \`users\` (
  \`id\` BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  \`email\` VARCHAR(255) NOT NULL UNIQUE COMMENT 'Mail address',
  \`nickname\` VARCHAR(50) DEFAULT 'guest',
  \`balance\` DECIMAL(10, 2) NOT NULL DEFAULT 0,
  \`created_at\` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  \`active\` BOOLEAN NOT NULL DEFAULT TRUE,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='User''s table';

CREATE INDEX \`idx_users_nickname\` ON \`users\` (\`nickname\`);

CREATE TABLE \`posts\` (
  \`id\` INT NOT NULL AUTO_INCREMENT,
  \`user_id\` BIGINT UNSIGNED NOT NULL,
  \`body\` TEXT,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE UNIQUE INDEX \`uq_posts_user\` ON \`posts\` (\`user_id\`, \`id\`);

ALTER TABLE \`posts\` ADD CONSTRAINT \`fk_posts_user\` FOREIGN KEY (\`user_id\`) REFERENCES \`users\` (\`id\`) ON DELETE CASCADE ON UPDATE NO ACTION;
",
  "filename": "schema.sql",
  "language": "sql",
}
`;

exports[`builtin exporters > mysql > django 1`] = `
{
  "content": "from django.db import models

class Users(models.Model):
    id = models.BigIntegerField(primary_key=True)
    email = models.CharField(max_length=255, unique=True)
    nickname = models.CharField(max_length=50, null=True, blank=True, default='guest')
    balance = models.CharField(default=0)
    created_at = models.DateTimeField()
    active = models.BooleanField(default=true)

    class Meta:
        db_table = 'users'
        indexes = [
            models.Index(fields=['nickname'], name='idx_users_nickname'),
        ]

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user_id = models.BigIntegerField()
    body = models.TextField(null=True, blank=True)
    user = models.ForeignKey('Users', on_delete=models.CASCADE)

    class Meta:
        db_table = 'posts'
        indexes = [
            models.Index(fields=['user_id', 'id'], name='uq_posts_user'),
        ]
",
  "filename": "models.py",
  "language": "python",
}
`;

exports[`builtin exporters > mysql > drizzle 1`] = `
{
  "content": "import { sql } from 'drizzle-orm';
import { mysqlTable as table, int, varchar, text, boolean, timestamp, serial } from 'drizzle-orm/mysql-core';

export const users = table('users', {
  id: integer('id').primaryKey(),
  email: varchar('email').notNull().unique(),
  nickname: varchar('nickname').default('guest'),
  balance: text('balance').notNull().default(0),
  created_at: timestamp('created_at').notNull().default(sql\`CURRENT_TIMESTAMP\`),
  active: boolean('active').notNull().default(true),
});

export const posts = table('posts', {
  id: integer('id').primaryKey(),
  user_id: integer('user_id').notNull(),
  body: text('body'),
});
",
  "filename": "schema.ts",
  "language": "typescript",
}
`;

exports[`builtin exporters > mysql > json 1`] = `
{
  "content": "{
  "version": "1.0.0",
  "projectName": "Fixture",
  "database": {
    "engine": "mysql",
    "version": "8.4",
    "charset": "utf8mb4"
  },
  "tables": [
    {
      "id": "t-users",
      "name": "users",
      "comment": "User's table",
      "columns": [
        {
          "id": "c1",
          "name": "id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "c2",
          "name": "email",
          "type": "VARCHAR",
          "length": 255,
          "nullable": false,
          "primaryKey": false,
          "unique": true,
          "autoIncrement": false,
          "unsigned": false,
          "comment": "Mail address"
        },
        {
          "id": "c3",
          "name": "nickname",
          "type": "VARCHAR",
          "length": 50,
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": "guest",
          "comment": ""
        },
        {
          "id": "c4",
          "name": "balance",
          "type": "DECIMAL",
          "precision": 10,
          "scale": 2,
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": 0,
          "comment": ""
        },
        {
          "id": "c5",
          "name": "created_at",
          "type": "TIMESTAMP",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": {
            "expression": "CURRENT_TIMESTAMP"
          },
          "comment": ""
        },
        {
          "id": "c6",
          "name": "active",
          "type": "BOOLEAN",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": true,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i1",
          "name": "idx_users_nickname",
          "columns": [
            "nickname"
          ],
          "unique": false
        }
      ],
      "foreignKeys": []
    },
    {
      "id": "t-posts",
      "name": "posts",
      "comment": "",
      "columns": [
        {
          "id": "p1",
          "name": "id",
          "type": "INT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": false,
          "comment": ""
        },
        {
          "id": "p2",
          "name": "user_id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "p3",
          "name": "body",
          "type": "TEXT",
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i2",
          "name": "uq_posts_user",
          "columns": [
            "user_id",
            "id"
          ],
          "unique": true
        }
      ],
      "foreignKeys": [
        {
          "id": "f1",
          "name": "fk_posts_user",
          "columns": [
            "user_id"
          ],
          "referenceTable": "t-users",
          "referenceColumns": [
            "id"
          ],
          "onDelete": "CASCADE",
          "onUpdate": "NO ACTION"
        }
      ]
    }
  ]
}",
  "filename": "tablespec.json",
  "language": "json",
}
`;

exports[`builtin exporters > mysql > laravel 1`] = `
{
  "content": "<?php

use Illuminate\\Database\\Migrations\\Migration;
use Illuminate\\Database\\Schema\\Blueprint;
use Illuminate\\Support\\Facades\\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id('id');
            $table->string('email')->unique()->comment('Mail address');
            $table->string('nickname')->nullable()->default('guest');
            $table->string('balance')->default(0);
            $table->dateTime('created_at');
            $table->boolean('active')->default(true);
        });

        Schema::create('posts', function (Blueprint $table) {
            $table->increments('id');
            $table->bigInteger('user_id')->unsigned();
            $table->text('body')->nullable();
            $table->foreign(['user_id'])->references(['id'])->on('users')->onDelete('cascade')->onUpdate('no action');
        });

    }

    public function down(): void
    {
        Schema::dropIfExists('posts');
        Schema::dropIfExists('users');
    }
};
",
  "filename": "migration.php",
  "language": "php",
}
`;

exports[`builtin exporters > mysql > mermaid 1`] = `
{
  "content": "erDiagram
  users {
    BIGINT id PK
    VARCHAR email
    VARCHAR nickname
    DECIMAL balance
    TIMESTAMP created_at
    BOOLEAN active
  }
  posts {
    INT id PK
    BIGINT user_id FK
    TEXT body
  }

  posts }o--|| users : ""
",
  "filename": "diagram.mmd",
  "language": "mermaid",
}
`;

exports[`builtin exporters > mysql > prisma 1`] = `
{
  "content": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model users {
  id BigInt @id @default(autoincrement())
  email String @unique
  nickname String?
  balance Decimal
  created_at DateTime
  active Boolean
  @@index([nickname])
}

model posts {
  id Int @id @default(autoincrement())
  user_id BigInt
  body String?
  @@unique([user_id, id])
}
",
  "filename": "schema.prisma",
  "language": "prisma",
}
`;

exports[`builtin exporters > mysql > rails 1`] = `
{
  "content": "class CreateTables < ActiveRecord::Migration[7.0]
  def change
    create_table :users do |t|
      t.string :email, null: false
      t.string :nickname, default: 'guest'
      t.string :balance, null: false, default: 0
      t.datetime :created_at, null: false
      t.boolean :active, null: false, default: true
    end
    add_index :users, [:nickname]

    create_table :posts do |t|
      t.bigint :user_id, null: false
      t.text :body
    end
    add_index :posts, [:user_id, :id], unique: true

    add_foreign_key :posts, :users, column: :user_id, primary_key: :id
  end
end
",
  "filename": "migration.rb",
  "language": "ruby",
}
`;

exports[`builtin exporters > mysql > sql 1`] = `
{
  "content": "CREATE TABLE \`users\` (
  \`id\` BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  \`email\` VARCHAR(255) NOT NULL UNIQUE COMMENT 'Mail address',
  \`nickname\` VARCHAR(50) DEFAULT 'guest',
  \`balance\` DECIMAL(10, 2) NOT NULL DEFAULT 0,
  \`created_at\` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  \`active\` BOOLEAN NOT NULL DEFAULT TRUE,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='User''s table';

CREATE INDEX \`idx_users_nickname\` ON \`users\` (\`nickname\`);

CREATE TABLE \`posts\` (
  \`id\` INT NOT NULL AUTO_INCREMENT,
  \`user_id\` BIGINT UNSIGNED NOT NULL,
  \`body\` TEXT,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

CREATE UNIQUE INDEX \`uq_posts_user\` ON \`posts\` (\`user_id\`, \`id\`);

ALTER TABLE \`posts\` ADD CONSTRAINT \`fk_posts_user\` FOREIGN KEY (\`user_id\`) REFERENCES \`users\` (\`id\`) ON DELETE CASCADE ON UPDATE NO ACTION;
",
  "filename": "schema.sql",
  "language": "sql",
}
`;

exports[`builtin exporters > postgresql > django 1`] = `
{
  "content": "from django.db import models

class Users(models.Model):
    id = models.BigIntegerField(primary_key=True)
    email = models.CharField(max_length=255, unique=True)
    nickname = models.CharField(max_length=50, null=True, blank=True, default='guest')
    balance = models.CharField(default=0)
    created_at = models.DateTimeField()
    active = models.BooleanField(default=true)

    class Meta:
        db_table = 'users'
        indexes = [
            models.Index(fields=['nickname'], name='idx_users_nickname'),
        ]

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user_id = models.BigIntegerField()
    body = models.TextField(null=True, blank=True)
    user = models.ForeignKey('Users', on_delete=models.CASCADE)

    class Meta:
        db_table = 'posts'
        indexes = [
            models.Index(fields=['user_id', 'id'], name='uq_posts_user'),
        ]
",
  "filename": "models.py",
  "language": "python",
}
`;

exports[`builtin exporters > postgresql > drizzle 1`] = `
{
  "content": "import { sql } from 'drizzle-orm';
import { pgTable as table, integer, varchar, text, boolean, timestamp, serial, uuid } from 'drizzle-orm/pg-core';

export const users = table('users', {
  id: integer('id').primaryKey(),
  email: varchar('email').notNull().unique(),
  nickname: varchar('nickname').default('guest'),
  balance: text('balance').notNull().default(0),
  created_at: timestamp('created_at').notNull().default(sql\`CURRENT_TIMESTAMP\`),
  active: boolean('active').notNull().default(true),
});

export const posts = table('posts', {
  id: integer('id').primaryKey(),
  user_id: integer('user_id').notNull(),
  body: text('body'),
});
",
  "filename": "schema.ts",
  "language": "typescript",
}
`;

exports[`builtin exporters > postgresql > json 1`] = `
{
  "content": "{
  "version": "1.0.0",
  "projectName": "Fixture",
  "database": {
    "engine": "postgresql",
    "version": "16",
    "charset": "utf8mb4"
  },
  "tables": [
    {
      "id": "t-users",
      "name": "users",
      "comment": "User's table",
      "columns": [
        {
          "id": "c1",
          "name": "id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "c2",
          "name": "email",
          "type": "VARCHAR",
          "length": 255,
          "nullable": false,
          "primaryKey": false,
          "unique": true,
          "autoIncrement": false,
          "unsigned": false,
          "comment": "Mail address"
        },
        {
          "id": "c3",
          "name": "nickname",
          "type": "VARCHAR",
          "length": 50,
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": "guest",
          "comment": ""
        },
        {
          "id": "c4",
          "name": "balance",
          "type": "DECIMAL",
          "precision": 10,
          "scale": 2,
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": 0,
          "comment": ""
        },
        {
          "id": "c5",
          "name": "created_at",
          "type": "TIMESTAMP",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": {
            "expression": "CURRENT_TIMESTAMP"
          },
          "comment": ""
        },
        {
          "id": "c6",
          "name": "active",
          "type": "BOOLEAN",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": true,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i1",
          "name": "idx_users_nickname",
          "columns": [
            "nickname"
          ],
          "unique": false
        }
      ],
      "foreignKeys": []
    },
    {
      "id": "t-posts",
      "name": "posts",
      "comment": "",
      "columns": [
        {
          "id": "p1",
          "name": "id",
          "type": "INT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": false,
          "comment": ""
        },
        {
          "id": "p2",
          "name": "user_id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "p3",
          "name": "body",
          "type": "TEXT",
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i2",
          "name": "uq_posts_user",
          "columns": [
            "user_id",
            "id"
          ],
          "unique": true
        }
      ],
      "foreignKeys": [
        {
          "id": "f1",
          "name": "fk_posts_user",
          "columns": [
            "user_id"
          ],
          "referenceTable": "t-users",
          "referenceColumns": [
            "id"
          ],
          "onDelete": "CASCADE",
          "onUpdate": "NO ACTION"
        }
      ]
    }
  ]
}",
  "filename": "tablespec.json",
  "language": "json",
}
`;

exports[`builtin exporters > postgresql > laravel 1`] = `
{
  "content": "<?php

use Illuminate\\Database\\Migrations\\Migration;
use Illuminate\\Database\\Schema\\Blueprint;
use Illuminate\\Support\\Facades\\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id('id');
            $table->string('email')->unique()->comment('Mail address');
            $table->string('nickname')->nullable()->default('guest');
            $table->string('balance')->default(0);
            $table->dateTime('created_at');
            $table->boolean('active')->default(true);
        });

        Schema::create('posts', function (Blueprint $table) {
            $table->increments('id');
            $table->bigInteger('user_id')->unsigned();
            $table->text('body')->nullable();
            $table->foreign(['user_id'])->references(['id'])->on('users')->onDelete('cascade')->onUpdate('no action');
        });

    }

    public function down(): void
    {
        Schema::dropIfExists('posts');
        Schema::dropIfExists('users');
    }
};
",
  "filename": "migration.php",
  "language": "php",
}
`;

exports[`builtin exporters > postgresql > mermaid 1`] = `
{
  "content": "erDiagram
  users {
    BIGINT id PK
    VARCHAR email
    VARCHAR nickname
    DECIMAL balance
    TIMESTAMP created_at
    BOOLEAN active
  }
  posts {
    INT id PK
    BIGINT user_id FK
    TEXT body
  }

  posts }o--|| users : ""
",
  "filename": "diagram.mmd",
  "language": "mermaid",
}
`;

exports[`builtin exporters > postgresql > prisma 1`] = `
{
  "content": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model users {
  id BigInt @id @default(autoincrement())
  email String @unique
  nickname String?
  balance Decimal
  created_at DateTime
  active Boolean
  @@index([nickname])
}

model posts {
  id Int @id @default(autoincrement())
  user_id BigInt
  body String?
  @@unique([user_id, id])
}
",
  "filename": "schema.prisma",
  "language": "prisma",
}
`;

exports[`builtin exporters > postgresql > rails 1`] = `
{
  "content": "class CreateTables < ActiveRecord::Migration[7.0]
  def change
    create_table :users do |t|
      t.string :email, null: false
      t.string :nickname, default: 'guest'
      t.string :balance, null: false, default: 0
      t.datetime :created_at, null: false
      t.boolean :active, null: false, default: true
    end
    add_index :users, [:nickname]

    create_table :posts do |t|
      t.bigint :user_id, null: false
      t.text :body
    end
    add_index :posts, [:user_id, :id], unique: true

    add_foreign_key :posts, :users, column: :user_id, primary_key: :id
  end
end
",
  "filename": "migration.rb",
  "language": "ruby",
}
`;

exports[`builtin exporters > postgresql > sql 1`] = `
{
  "content": "CREATE TABLE "users" (
  "id" BIGSERIAL NOT NULL,
  "email" VARCHAR(255) NOT NULL UNIQUE,
  "nickname" VARCHAR(50) DEFAULT 'guest',
  "balance" DECIMAL(10, 2) NOT NULL DEFAULT 0,
  "created_at" TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "active" BOOLEAN NOT NULL DEFAULT TRUE,
  PRIMARY KEY ("id")
);

CREATE INDEX "idx_users_nickname" ON "users" ("nickname");

CREATE TABLE "posts" (
  "id" SERIAL NOT NULL,
  "user_id" BIGINT NOT NULL,
  "body" TEXT,
  PRIMARY KEY ("id")
);

CREATE UNIQUE INDEX "uq_posts_user" ON "posts" ("user_id", "id");

ALTER TABLE "posts" ADD CONSTRAINT "fk_posts_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE ON UPDATE NO ACTION;
",
  "filename": "schema.sql",
  "language": "sql",
}
`;

exports[`builtin exporters > sqlite > django 1`] = `
{
  "content": "from django.db import models

class Users(models.Model):
    id = models.BigIntegerField(primary_key=True)
    email = models.CharField(max_length=255, unique=True)
    nickname = models.CharField(max_length=50, null=True, blank=True, default='guest')
    balance = models.CharField(default=0)
    created_at = models.DateTimeField()
    active = models.BooleanField(default=true)

    class Meta:
        db_table = 'users'
        indexes = [
            models.Index(fields=['nickname'], name='idx_users_nickname'),
        ]

class Posts(models.Model):
    id = models.IntegerField(primary_key=True)
    user_id = models.BigIntegerField()
    body = models.TextField(null=True, blank=True)
    user = models.ForeignKey('Users', on_delete=models.CASCADE)

    class Meta:
        db_table = 'posts'
        indexes = [
            models.Index(fields=['user_id', 'id'], name='uq_posts_user'),
        ]
",
  "filename": "models.py",
  "language": "python",
}
`;

exports[`builtin exporters > sqlite > drizzle 1`] = `
{
  "content": "import { sql } from 'drizzle-orm';
import { sqliteTable as table, integer, text, blob } from 'drizzle-orm/sqlite-core';

export const users = table('users', {
  id: integer('id').primaryKey(),
  email: varchar('email').notNull().unique(),
  nickname: varchar('nickname').default('guest'),
  balance: text('balance').notNull().default(0),
  created_at: timestamp('created_at').notNull().default(sql\`CURRENT_TIMESTAMP\`),
  active: boolean('active').notNull().default(true),
});

export const posts = table('posts', {
  id: integer('id').primaryKey(),
  user_id: integer('user_id').notNull(),
  body: text('body'),
});
",
  "filename": "schema.ts",
  "language": "typescript",
}
`;

exports[`builtin exporters > sqlite > json 1`] = `
{
  "content": "{
  "version": "1.0.0",
  "projectName": "Fixture",
  "database": {
    "engine": "sqlite",
    "version": "3",
    "charset": "utf8mb4"
  },
  "tables": [
    {
      "id": "t-users",
      "name": "users",
      "comment": "User's table",
      "columns": [
        {
          "id": "c1",
          "name": "id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "c2",
          "name": "email",
          "type": "VARCHAR",
          "length": 255,
          "nullable": false,
          "primaryKey": false,
          "unique": true,
          "autoIncrement": false,
          "unsigned": false,
          "comment": "Mail address"
        },
        {
          "id": "c3",
          "name": "nickname",
          "type": "VARCHAR",
          "length": 50,
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": "guest",
          "comment": ""
        },
        {
          "id": "c4",
          "name": "balance",
          "type": "DECIMAL",
          "precision": 10,
          "scale": 2,
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": 0,
          "comment": ""
        },
        {
          "id": "c5",
          "name": "created_at",
          "type": "TIMESTAMP",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": {
            "expression": "CURRENT_TIMESTAMP"
          },
          "comment": ""
        },
        {
          "id": "c6",
          "name": "active",
          "type": "BOOLEAN",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "default": true,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i1",
          "name": "idx_users_nickname",
          "columns": [
            "nickname"
          ],
          "unique": false
        }
      ],
      "foreignKeys": []
    },
    {
      "id": "t-posts",
      "name": "posts",
      "comment": "",
      "columns": [
        {
          "id": "p1",
          "name": "id",
          "type": "INT",
          "nullable": false,
          "primaryKey": true,
          "unique": false,
          "autoIncrement": true,
          "unsigned": false,
          "comment": ""
        },
        {
          "id": "p2",
          "name": "user_id",
          "type": "BIGINT",
          "nullable": false,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": true,
          "comment": ""
        },
        {
          "id": "p3",
          "name": "body",
          "type": "TEXT",
          "nullable": true,
          "primaryKey": false,
          "unique": false,
          "autoIncrement": false,
          "unsigned": false,
          "comment": ""
        }
      ],
      "indexes": [
        {
          "id": "i2",
          "name": "uq_posts_user",
          "columns": [
            "user_id",
            "id"
          ],
          "unique": true
        }
      ],
      "foreignKeys": [
        {
          "id": "f1",
          "name": "fk_posts_user",
          "columns": [
            "user_id"
          ],
          "referenceTable": "t-users",
          "referenceColumns": [
            "id"
          ],
          "onDelete": "CASCADE",
          "onUpdate": "NO ACTION"
        }
      ]
    }
  ]
}",
  "filename": "tablespec.json",
  "language": "json",
}
`;

exports[`builtin exporters > sqlite > laravel 1`] = `
{
  "content": "<?php

use Illuminate\\Database\\Migrations\\Migration;
use Illuminate\\Database\\Schema\\Blueprint;
use Illuminate\\Support\\Facades\\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id('id');
            $table->string('email')->unique()->comment('Mail address');
            $table->string('nickname')->nullable()->default('guest');
            $table->string('balance')->default(0);
            $table->dateTime('created_at');
            $table->boolean('active')->default(true);
        });

        Schema::create('posts', function (Blueprint $table) {
            $table->increments('id');
            $table->bigInteger('user_id')->unsigned();
            $table->text('body')->nullable();
            $table->foreign(['user_id'])->references(['id'])->on('users')->onDelete('cascade')->onUpdate('no action');
        });

    }

    public function down(): void
    {
        Schema::dropIfExists('posts');
        Schema::dropIfExists('users');
    }
};
",
  "filename": "migration.php",
  "language": "php",
}
`;

exports[`builtin exporters > sqlite > mermaid 1`] = `
{
  "content": "erDiagram
  users {
    BIGINT id PK
    VARCHAR email
    VARCHAR nickname
    DECIMAL balance
    TIMESTAMP created_at
    BOOLEAN active
  }
  posts {
    INT id PK
    BIGINT user_id FK
    TEXT body
  }

  posts }o--|| users : ""
",
  "filename": "diagram.mmd",
  "language": "mermaid",
}
`;

exports[`builtin exporters > sqlite > prisma 1`] = `
{
  "content": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model users {
  id BigInt @id @default(autoincrement())
  email String @unique
  nickname String?
  balance Decimal
  created_at DateTime
  active Boolean
  @@index([nickname])
}

model posts {
  id Int @id @default(autoincrement())
  user_id BigInt
  body String?
  @@unique([user_id, id])
}
",
  "filename": "schema.prisma",
  "language": "prisma",
}
`;

exports[`builtin exporters > sqlite > rails 1`] = `
{
  "content": "class CreateTables < ActiveRecord::Migration[7.0]
  def change
    create_table :users do |t|
      t.string :email, null: false
      t.string :nickname, default: 'guest'
      t.string :balance, null: false, default: 0
      t.datetime :created_at, null: false
      t.boolean :active, null: false, default: true
    end
    add_index :users, [:nickname]

    create_table :posts do |t|
      t.bigint :user_id, null: false
      t.text :body
    end
    add_index :posts, [:user_id, :id], unique: true

    add_foreign_key :posts, :users, column: :user_id, primary_key: :id
  end
end
",
  "filename": "migration.rb",
  "language": "ruby",
}
`;

exports[`builtin exporters > sqlite > sql 1`] = `
{
  "content": "CREATE TABLE "users" (
  "id" BIGINT NOT NULL AUTOINCREMENT,
  "email" VARCHAR(255) NOT NULL UNIQUE,
  "nickname" VARCHAR(50) DEFAULT 'guest',
  "balance" DECIMAL(10, 2) NOT NULL DEFAULT 0,
  "created_at" TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  "active" BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE INDEX "idx_users_nickname" ON "users" ("nickname");

CREATE TABLE "posts" (
  "id" INT NOT NULL AUTOINCREMENT,
  "user_id" BIGINT NOT NULL,
  "body" TEXT
);

CREATE UNIQUE INDEX "uq_posts_user" ON "posts" ("user_id", "id");
",
  "filename": "schema.sql",
  "language": "sql",
}
`;
